# circles-packing

./: .gitignore  Cargo.toml  README.md
src/: calc_all_cases.rs  circle.rs  main.rs  packing.rs  packomania.rs  plot.rs  point.rs  ralgo.rs  read_and_gen_tables.rs  rng_task.rs  utils.rs
src/evaluate/: heuristic_all_cases.rs  heuristic_single_case.rs  heuristic_single_case_console.rs  mod.rs  random_all_cases.rs  random_single_case.rs  random_single_case_console.rs  random_single_case_iterations.rs  rng_task.rs  utils.rs
src/ralgo/: calcfg.rs  dichotomy_step_ralgo.rs  mod.rs  ralgo.rs  ralgo_params.rs  ralgo_result.rs  utils.rs
