[package]
name = "studying"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "^0.32.3"
rand = "0.8.5"
plotters = "0.3.5"
rust_xlsxwriter = "0.47.0"
rayon = "1.8.0"
calamine = "0.23.1"
regex = "1"